--- a/packages/ui-library/src/demo/index.html
+++ b/packages/ui-library/src/demo/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>React based UI library Demo</title>
 	<link rel="stylesheet" type="text/css" href="src/css/ui-library.css">
+	<link rel="stylesheet" type="text/css" href="src/demo/css/ui-library-demo.css">
 </head>
 <body>
 	<div id="demo" />
 	
-	<script type="text/javascript" src="../demo.js"></script>
+	<script type="text/javascript" src="../../demo.js"></script>
 </body>
 </html>
