--- a/packages/ui-library/src/demo/index.html
+++ b/packages/ui-library/src/demo/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<meta charset="UTF-8">
-	<title>React based UI library Demo</title>
+	<title>Ping Identity UI Component Library</title>
+
+	<link rel="shortcut icon" id="favicon" type="image/x-icon" href="src/demo/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="src/css/ui-library.css">
 	<link rel="stylesheet" type="text/css" href="src/demo/css/ui-library-demo.css">
+
 </head>
 <body>
+	
 	<div id="demo" />
 	
 	<script type="text/javascript" src="../../demo.js"></script>
+
 </body>
 </html>
