ID-2649 ID-2650 -- compile the SCSS through webpack when running the demo app
Change-Id: Idb56617552ca57729627dc3b1fb7ee564bf07603

--- a/packages/ui-library/src/demo/index.html
+++ b/packages/ui-library/src/demo/index.html
@@ -6,9 +6,10 @@
 	<title>Ping Identity UI Component Library</title>
 
 	<link rel="shortcut icon" id="favicon" type="image/x-icon" href="src/demo/images/favicon.png">
-	<link rel="stylesheet" type="text/css" href="src/css/ui-library.css">
-	<link rel="stylesheet" type="text/css" href="src/demo/css/ui-library-demo.css">
 
+	<!-- the CSS file names are defined in the webpack config -->
+	<link rel="stylesheet" type="text/css" href="maincss.css">
+	<link rel="stylesheet" type="text/css" href="democss.css">
 </head>
 <body>
 	
