ID-2786 ID-2800: Added the InfiniteScroll to the ui-library and refactored the demo page to make it easier to add demos.
Change-Id: I99570b85baf061bca139af1ed5034ca6f5e4ae71

--- a/packages/ui-library/src/demo/index.html
+++ b/packages/ui-library/src/demo/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-	<meta charset="UTF-8">
-	<title>Ping Identity UI Component Library</title>
+    
+    <meta charset="UTF-8">
+    <title>Ping Identity UI Component Library</title>
 
-	<link rel="shortcut icon" id="favicon" type="image/x-icon" href="src/demo/images/favicon.png">
+    <link rel="shortcut icon" id="favicon" type="image/x-icon" href="src/demo/images/favicon.png">
 
-	<!-- the CSS file names are defined in the webpack config -->
-	<link rel="stylesheet" type="text/css" href="maincss.css">
-	<link rel="stylesheet" type="text/css" href="democss.css">
-</head>
-<body>
-	
-	<div id="demo" />
-	
-	<script type="text/javascript" src="../../demo.js"></script>
-
-</body>
+    <!-- the CSS file names are defined in the webpack config -->
+    <link rel="stylesheet" type="text/css" href="maincss.css">
+    <link rel="stylesheet" type="text/css" href="democss.css">
+    <link rel="stylesheet" type="text/css" href="src/demo/css/hljs/github.css">
+    </head>
+    <body>
+        <script type="text/javascript" src="../src/demo/highlight.js"></script>
+        <script type="text/javascript" src="../../demo.js"></script>
+    </body>
 </html>
