--- a/packages/ui-library/src/demo/index.html
+++ b/packages/ui-library/src/demo/index.html
@@ -10,6 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="maincss.css">
 	<link rel="stylesheet" type="text/css" href="democss.css">
 	<link rel="stylesheet" type="text/css" href="src/demo/css/hljs/github.css">
+
+	<meta http-equiv="cache-control" content="max-age=0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+	<meta http-equiv="pragma" content="no-cache" />
 </head>
 <body>
 	<div id="demo" />
