UIP-64 -- disable the caching on UI-library versions fetch for hosting
Change-Id: Ie830a5d9c5b3fe8fe77617fb2fb7432573804b2e

--- a/packages/ui-library/hosting/index.html
+++ b/packages/ui-library/hosting/index.html
@@ -29,7 +29,7 @@
 			var versionsRequest = new XMLHttpRequest();
 			versionsRequest.addEventListener("load", onVersionsLoaded);
 			versionsRequest.addEventListener("error", onVersionsLoadError);
-			versionsRequest.open("GET", "versions.json");
+			versionsRequest.open("GET", "versions.json?_=" + new Date().getTime());
 			versionsRequest.send();
 		}
 
