Replaced Stack with Form and moved logo out of it.

--- a/packages/end-user/static/signon.html
+++ b/packages/end-user/static/signon.html
@@ -15,11 +15,11 @@
             undefined undefined undefined
         </style>
         <div class="card">
-            <div class="stack stack--with-header">
-                <div class="org-logo">
-                    <img class="org-logo__image" src="ping-logo.svg"
-                        alt="Company Logo" />
-                </div>
+            <div class="org-logo">
+                <img class="org-logo__image" src="ping-logo.svg"
+                    alt="Company Logo" />
+            </div>
+            <form class="form">
                 <div class="float-label">
                     <input type="text" class="text-input float-label__input"
                         placeholder="Username" id="username" name="username"
@@ -41,7 +41,7 @@
                     </label>
                 </div>
                 <button class="button button--primary brand-primary-bg">Sign On</button>
-            </div>
+            </form>
         </div>
     </div>
     <div class="page__footer brand-footer-color">© Copyright 2017 Ping Identity. All rights reserved.</div>
