--- a/packages/end-user/static/branded.html
+++ b/packages/end-user/static/branded.html
@@ -39,11 +39,11 @@
             }
         </style>
         <div class="card">
-            <div class="stack stack--with-header">
-                <div class="org-logo">
-                    <img class="org-logo__image" src="jj-logo.png"
-                        alt="Company Logo" />
-                </div>
+            <div class="org-logo">
+                <img class="org-logo__image" src="jj-logo.png" alt="Company Logo"
+                />
+            </div>
+            <form class="form">
                 <div class="float-label">
                     <input type="text" class="text-input float-label__input"
                         placeholder="Username" id="username" name="username"
@@ -65,7 +65,7 @@
                     </label>
                 </div>
                 <button class="button button--primary brand-primary-bg">Sign On</button>
-            </div>
+            </form>
         </div>
     </div>
     <div class="page__footer brand-footer-color">© Copyright 2017 Ping Identity. All rights reserved.</div>
