Reorganized how you add pages/routes.

--- a/packages/end-user/static/branded.html
+++ b/packages/end-user/static/branded.html
@@ -11,7 +11,7 @@
             <div class="page__content">
         <style>
             .brand-background {
-                background-color: #00f;
+                background-color: #0000ff;
             }
 
             .brand-primary-text:hover {
@@ -23,15 +23,15 @@
             }
 
             .brand-primary-text {
-                color: #f00;
+                color: #ff0000;
             }
 
             .brand-primary-bg {
-                background: #f00;
+                background: #ff0000;
             }
 
             .brand-primary-bg:active {
-                background: #f00;
+                background: #ff0000;
             }
 
             .brand-footer-color {
