--- a/packages/end-user/src/demo/template.html
+++ b/packages/end-user/src/demo/template.html
@@ -11,7 +11,7 @@
     %><meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="app-container">
         <%= typeof content !== 'undefined' ? content : '' %>
     </div>
 </body>
