Standardized all color names to match colors used by the UI library

--- a/packages/end-user/static/branded.html
+++ b/packages/end-user/static/branded.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="app-container">
         <div class="page brand-background">
             <div class="page__content">
         <style>
@@ -46,7 +46,7 @@
             <form class="form">
                 <div class="float-label">
                     <input type="text" class="text-input float-label__input"
-                        placeholder="Username" id="username" name="username"
+                        id="username" name="username" placeholder="Username"
                     />
                     <label class="float-label__label" for="username">Username</label>
                 </div>
