--- a/packages/end-user/static/branded.html
+++ b/packages/end-user/static/branded.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="float-label">
                     <input type="password" class="text-input float-label__input"
-                        placeholder="Password" id="password" name="password"
+                        id="password" name="password" placeholder="Password"
                     />
                     <label class="float-label__label" for="password">Password</label>
                 </div>
