Added muted text style

--- a/packages/end-user/static/signingon.html
+++ b/packages/end-user/static/signingon.html
@@ -22,9 +22,9 @@
             <h1 class="heading">Signing you on...</h1>
             <img class="spinner" src="spinner.svg"
                 alt="" />
-            <p class="text-block text-block--small">
-                <span class="text-block__text">You are being signed on.</span>
-            </p>
+            <div class="text-block text-block--small">
+                <div class="text-block__text">You are being signed on.</div>
+            </div>
         </div>
     </div>
     <div class="page__footer brand-footer-color">© Copyright 2017 Ping Identity. All rights reserved.</div>
