New dropdown components

--- a/packages/end-user/static/mfa.html
+++ b/packages/end-user/static/mfa.html
@@ -9,7 +9,21 @@
 <body>
     <div id="app" class="app-container">
         <div class="page-content">
-            <div>
+            <ul class="demo-nav">
+        <li>
+            <a href="./">Main</a>
+        </li>
+        <li>
+            <a href="inputs.html">Inputs</a>
+        </li>
+        <li>
+            <a href="layouts.html">Layouts</a>
+        </li>
+        <li>
+            <a href="mfa.html">MFA</a>
+        </li>
+    </ul>
+    <div>
         <h1 id="Ping-End-User-MFA">Ping End-User MFA</h1>
         <div class="component-demo">
             <div class="component-demo__preview">
