--- a/packages/end-user/static/changepw.html
+++ b/packages/end-user/static/changepw.html
@@ -43,7 +43,7 @@
                         <div
                             class="requirements">
                             <div class="requirement">
-                                <img class="requirement__icon" src="error.svg"
+                                <img class="requirement__icon" src="incomplete.svg"
                                     alt="No" />
                                 <span class="requirement__name">6 characters</span>
                             </div>
@@ -58,7 +58,7 @@
                                 <span class="requirement__name">1 lowercase letter</span>
                             </div>
                             <div class="requirement">
-                                <img class="requirement__icon" src="error.svg"
+                                <img class="requirement__icon" src="incomplete.svg"
                                     alt="No" />
                                 <span class="requirement__name">1 number (0-9)</span>
                             </div>
