--- a/packages/end-user/static/selfservice.html
+++ b/packages/end-user/static/selfservice.html
@@ -86,7 +86,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     (123) 456-7890</div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     katie.addleman@compra
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     1440 S Main Street</div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     San Diego</div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     CA</div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     92121</div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                             <div class="text-block text-block--full-width"
                                 data-id="textblock">
                                 <div
-                                    class="text-block__text">
+                                    class="text-block__text text-block--full-width">
                                     United States</div>
                             </div>
                         </div>
