UIP-4182: Move form logic to hook and allow options for more form control

--- a/packages/schema-form/src/index.html
+++ b/packages/schema-form/src/index.html
@@ -248,6 +248,7 @@
 
       // NOTE: This sitekey is only for development purposes
       ReactDOM.render(React.createElement(pingSchemaForm.Form, {
+        liveValidate: 'postSubmit',
         endpoint: '/test',
         formData,
         formSuccessMessage: 'Your request has been received and we will contact you if necessary.',
